# substrate-node-template

./: Cargo.toml
.maintain /: frame-weight-template.hbs
erc20/: .gitignore  lib.rs
node/src/: benchmarking.rs  command.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/migrations/: v1.rs  v2.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  tests.rs  weights.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
